--- a/examples/src/main/resources/index.html
+++ b/examples/src/main/resources/index.html
@@ -7,6 +7,6 @@
     <div id="app"></div>
     <script src="../../../target/scala-2.11/scalajs-mithril-examples-fastopt.js"></script>
     <script src="../../../target/scala-2.11/scalajs-mithril-examples-jsdeps.js"></script>
-    <script>Counter().main();</script>
+    <script>ExampleApp().main();</script>
   </body>
 </html>
